deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nag-image
  namespace: sai
  labels:
    app: nag-image
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nag-image
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: nag-image
    spec:
      containers:
      - name: nag-image
        image: munna2218.azurecr.io/nag-image:latest
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /_status/healthz
            port: 5000   # Corrected port to match the containerPort
          initialDelaySeconds: 8
          periodSeconds: 10
          failureThreshold: 3  # Corrected field name
          successThreshold: 1  # Corrected field name
        readinessProbe:
          httpGet:
            path: /readiness
            port: 5000   # Corrected port to match the containerPort
          initialDelaySeconds: 15
          periodSeconds: 5
