service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nag-image
  namespace: sai
spec:
  selector:
    app: nag-image
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
